Preparing publish from SolaceProducts

--- a/helm-charts/index.html
+++ b/helm-charts/index.html
@@ -1,3 +1,3 @@
 Solace stable Helm charts.
 
-For more information, refer to https://github.com/SolaceDev/solace-kubernetes-quickstart/tree/HelmReorg
+For more information, refer to <a href="https://github.com/SolaceDev/solace-kubernetes-quickstart/tree/HelmReorg">https://github.com/SolaceDev/solace-kubernetes-quickstart/tree/HelmReorg</a>
